Script rendering